--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,3 +2,5 @@
   link: mailto:designinformatics@ed.ac.uk?subject=VizBlocks Enquiry
 - name: Design Informatics Website
   link: https://www.designinformatics.org/
+- name: Design Informatics Website
+  link: https://www.designinformatics.org/
