--- a/_data/funding.yml
+++ b/_data/funding.yml
@@ -1,6 +1,2 @@
 - name: Edinburgh Futures Institute
-  link: /
-- name: Funder 2
-  link: /
-- name: Funder 3
-  link: /
+  link: https://efi.ed.ac.uk/
