--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,6 +1,6 @@
 strapline:  VizBlocks is a tangible, modular and hackable toolkit for exploring data visualisation and the internet of things.
 
-intro_text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed.
+intro_text: VizBlocks is a dynamic data visualisation kit which offers public audiences new ways of physically representing data using a modular kit. With a range of materials, mechanisms and tools, VizBlocks can be used to translate data into playful and engaging physical data displays. 
 
 blocks_text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed.
 
