--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1,3 +1,4 @@
+# The liquid markdown to render this is currently commented out in _includes/intro.html
 - name: Partner 1
   link: /
 - name: Partner 2
