--- a/_data/content.yml
+++ b/_data/content.yml
@@ -1,8 +1,8 @@
 strapline:  VizBlocks is a tangible, modular and hackable toolkit for exploring data visualisation and the internet of things.
 
-intro_text: VizBlocks is a dynamic data visualisation kit which offers public audiences new ways of physically representing data using a modular kit. With a range of materials, mechanisms and tools, VizBlocks can be used to translate data into playful and engaging physical data displays. 
+intro_text: VizBlocks is a dynamic data visualisation kit which offers public audiences new ways of physically representing data using a modular kit. With a range of materials, mechanisms and tools, VizBlocks can be used to translate data into playful and engaging physical data displays.
 
-blocks_text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed.
+blocks_text: While you can use the VizBlocks system to build your own blocks, we have a number of pre-made blocks to get you started. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed.
 
 system_text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris commodo interdum est eu mollis. Sed imperdiet, libero a rhoncus euismod, nisl eros dictum est, sed.
 
